@@ -26,6 +26,8 @@
  * Use is subject to license terms.
  */
 
+/* @@trigger: none */
+
 BEGIN
 {
 	trace("hello");
