@@ -1,3 +1,7 @@
+2011-09-14  Nick Alcock  <nick.alcock@oracle.com>
+
+	* runtest.sh: Support /* @@trigger: none */ to run untriggered tests.
+
 2011-09-14  Shujing Zhao  <pearly.zhao@oracle.com>
 
 	* test/dtrace/begin.d: Adjust: fix copyright date, assign trigger. Fix
